rebuildd (0.2.0) UNRELEASED; urgency=low

  * Stock builder hostname in job table
  * Add new max_jobs config var, used to load max_jobs new jobs
    This adds a new state WAIT_LOCKED for locking jobs handled by a build.
  * Handle SIGINT like SIGTERM

 -- Julien Danjou <acid@debian.org>  Tue, 10 Jul 2007 10:36:33 +0200

rebuildd (0.1.0) unstable; urgency=low

  * Initial release

 -- Julien Danjou <acid@debian.org>  Sat, 07 Jul 2007 14:44:58 +0200
