@@ -14,6 +14,8 @@
           <th>Date</th>
           <th>Mail to</th>
           <th>Build status</th>
+          <th>Build start</th>
+          <th>Build end</th>
         </tr>
       % for job in jobs:
         <tr>
@@ -51,6 +53,8 @@
           % if job.build_status == 1000:
             <td bgcolor="green" align="center">OK
           % endif
+          <td>${job.build_start}</td>
+          <td>${job.build_end}</td>
           </td>
         </tr>
       % endfor
